--- a/playbook.yml
+++ b/playbook.yml
@@ -4,6 +4,25 @@
   roles:
   - { role: ansiblebit.oracle-java,
       oracle_java_set_as_default: yes }
+  - role: jdauphant.nginx
+    nginx_http_params:
+     - proxy_read_timeout 1200
+     - proxy_connect_timeout 240
+     - client_max_body_size 0
+     - "map $http_upgrade $connection_upgrade { default upgrade; ''   ''; } #"
+    nginx_sites:
+     tc:
+      - listen 80
+      - server_name localhost tc.vagrant
+      - | 
+         location / { 
+           proxy_pass http://localhost:8111; 
+           proxy_http_version 1.1; 
+           proxy_set_header X-Forwarded-For $remote_addr; 
+           proxy_set_header Host $server_name:$server_port;
+           proxy_set_header Upgrade $http_upgrade;
+           proxy_set_header Connection $connection_upgrade;
+         }
   tasks:
   - name: Ensure htop is installed
     apt: name=htop state=present
